--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -85,6 +85,13 @@
             <version>2.11.0</version>
         </dependency>
 
+        <!-- Metadata Extraction Library -->
+        <dependency>
+            <groupId>com.drewnoakes</groupId>
+            <artifactId>metadata-extractor</artifactId>
+            <version>2.18.0</version>
+        </dependency>
+
         <!-- Lombok -->
         <dependency>
             <groupId>org.projectlombok</groupId>
